fix spacing and img alt

--- a/styles/Contact.module.css
+++ b/styles/Contact.module.css
@@ -1,47 +1,43 @@
 .container {
-  height: 100%;
+    height: 100%;
 }
 
 .h1UnderLine {
-  border-bottom: 3px solid #debf79;
+    border-bottom: 3px solid #debf79;
 }
 
 .inputs {
-  width: 100%;
-  height: 55px;
-  margin-top: 15px;
-  border: none;
-  background-color: #f5f5f5;
-  padding: 15px;
-  font-size: 12px;
-  border-radius: 0;
+    width: 100%;
+    height: 55px;
+    margin-top: 15px;
+    border: none;
+    background-color: #f5f5f5;
+    padding: 15px;
+    font-size: 12px;
+    border-radius: 0;
 }
 
 .inputs[type="text"]:focus {
-  border-radius: 0;
+    border-radius: 0;
 }
 
 .textArea {
-  width: 100%;
-  margin-top: 15px;
-  height: 140px;
-  border: 0;
-  background-color: #f5f5f5;
-  resize: none;
-  padding: 10px 15px;
-  font-size: 12px;
+    width: 100%;
+    margin-top: 15px;
+    height: 140px;
+    border: 0;
+    background-color: #f5f5f5;
+    resize: none;
+    padding: 10px 15px;
+    font-size: 12px;
 }
 
 .contact p {
-  text-align: justify;
+    text-align: justify;
 }
 
 @media screen and (max-width: 992px) {
-  .contact {
-    margin-top: 70px;
-  }
-
-  .bg-white {
-    justify-content: space-around !important;
-  }
+    .contact {
+        margin-top: 70px;
+    }
 }
